@@ -1,8 +1,8 @@
 /*
  *  R : A Computer Language for Statistical Data Analysis
  *  Copyright (C) 1995, 1996  Robert Gentleman and Ross Ihaka
- *  Copyright (C) 1997--2015  The R Core Team
- *  Copyright (C) 2003--2015  The R Foundation
+ *  Copyright (C) 1997--2016  The R Core Team
+ *  Copyright (C) 2003--2016  The R Foundation
  *
  *  This program is free software; you can redistribute it and/or modify
  *  it under the terms of the GNU General Public License as published by
@@ -347,8 +347,8 @@ FUNTAB R_FunTab[] = {
 
     {"psigamma", do_math2, 26, 11, 2, {PP_FUNCALL, PREC_FN, 0}},
 
-    /* Mathematical Functions of a Complex Argument */
-    /* these are group generic and so need to eval args */
+    /* Mathematical Functions of a Complex Argument:
+     * These are group generic and so need to eval args --> ./complex.c */
 
     {"Re", do_cmathfuns, 1, 1, 1, {PP_FUNCALL, PREC_FN, 0}},
     {"Im", do_cmathfuns, 2, 1, 1, {PP_FUNCALL, PREC_FN, 0}},
@@ -515,6 +515,8 @@ FUNTAB R_FunTab[] = {
     {"nchar", do_nchar, 1, 11, 4, {PP_FUNCALL, PREC_FN, 0}},
     {"nzchar", do_nzchar, 1, 1, -1, {PP_FUNCALL, PREC_FN, 0}},
     {"substr", do_substr, 1, 11, 3, {PP_FUNCALL, PREC_FN, 0}},
+    {"startsWith", do_startsWith, 0, 11, 2, {PP_FUNCALL, PREC_FN, 0}},
+    {"endsWith", do_startsWith, 1, 11, 2, {PP_FUNCALL, PREC_FN, 0}},
     {"substr<-", do_substrgets, 1, 11, 4, {PP_FUNCALL, PREC_FN, 0}},
     {"strsplit", do_strsplit, 1, 11, 5, {PP_FUNCALL, PREC_FN, 0}},
     {"abbreviate", do_abbrev, 1, 11, 3, {PP_FUNCALL, PREC_FN, 0}},
